Fix test asmdef

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/unityWebRequest/asmdef_test.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/unityWebRequest/asmdef_test.mustache
@@ -8,5 +8,8 @@
     "precompiledReferences": [
         "nunit.framework.dll",
         "Newtonsoft.Json.dll"
+    ],
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
     ]
 }
