initial setup union_response.

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
@@ -41,7 +41,18 @@ class {{classname}} {
   {{#isDeprecated}}
   @Deprecated('This operation has been deprecated')
   {{/isDeprecated}}
-  Future<Response<{{{returnType}}}{{^returnType}}void{{/returnType}}>> {{nickname}}({ {{#allParams}}{{#isPathParam}}
+  {{#useFreezed}}
+    {{#freezedUnionResponse}}
+        Future<Response<{{#lambda.titlecase}}{{nickname}}{{/lambda.titlecase}}Data>> {{nickname}}({
+    {{/freezedUnionResponse}}
+    {{^freezedUnionResponse}}
+        Future<Response<{{{returnType}}}{{^returnType}}void{{/returnType}}>> {{nickname}}({
+    {{/freezedUnionResponse}}
+  {{/useFreezed}}
+  {{^useFreezed}}
+  Future<Response<{{{returnType}}}{{^returnType}}void{{/returnType}}>> {{nickname}}({
+  {{/useFreezed}}
+  {{#allParams}}{{#isPathParam}}
     required {{{dataType}}} {{paramName}},{{/isPathParam}}{{#isQueryParam}}
     {{#required}}{{^isNullable}}{{^defaultValue}}required {{/defaultValue}}{{/isNullable}}{{/required}}{{{dataType}}}{{#required}}{{#isNullable}}?{{/isNullable}}{{/required}}{{^required}}?{{/required}} {{paramName}}{{^isContainer}}{{#defaultValue}} = {{{.}}}{{/defaultValue}}{{/isContainer}},{{/isQueryParam}}{{#isHeaderParam}}
     {{#required}}{{^isNullable}}{{^defaultValue}}required {{/defaultValue}}{{/isNullable}}{{/required}}{{{dataType}}}{{#required}}{{#isNullable}}?{{/isNullable}}{{/required}}{{^required}}?{{/required}} {{paramName}}{{^isContainer}}{{#defaultValue}} = {{{.}}}{{/defaultValue}}{{/isContainer}},{{/isHeaderParam}}{{#isBodyParam}}
@@ -119,7 +130,17 @@ class {{classname}} {
     );
     {{#returnType}}
 
-    {{{returnType}}} _responseData;
+    {{#useFreezed}}
+        {{#freezedUnionResponse}}
+            {{#lambda.titlecase}}{{nickname}}{{/lambda.titlecase}}Data _responseData;
+        {{/freezedUnionResponse}}
+        {{^freezedUnionResponse}}
+            {{{returnType}}} _responseData;
+        {{/freezedUnionResponse}}
+    {{/useFreezed}}
+    {{^useFreezed}}
+        {{{returnType}}} _responseData;
+    {{/useFreezed}}
 
     try {
 {{#includeLibraryTemplate}}api/deserialize{{/includeLibraryTemplate}}
@@ -133,7 +154,17 @@ class {{classname}} {
       );
     }
 
+    {{#useFreezed}}
+        {{#freezedUnionResponse}}
+    return Response<{{#lambda.titlecase}}{{nickname}}{{/lambda.titlecase}}Data>(
+        {{/freezedUnionResponse}}
+        {{^freezedUnionResponse}}
     return Response<{{{returnType}}}>(
+        {{/freezedUnionResponse}}
+    {{/useFreezed}}
+    {{^useFreezed}}
+    return Response<{{{returnType}}}>(
+    {{/useFreezed}}
       data: _responseData,
       headers: _response.headers,
       isRedirect: _response.isRedirect,
@@ -142,8 +173,41 @@ class {{classname}} {
       statusCode: _response.statusCode,
       statusMessage: _response.statusMessage,
       extra: _response.extra,
-    );{{/returnType}}{{^returnType}}
-    return _response;{{/returnType}}
+    );{{/returnType}}
+    {{^returnType}}
+        {{^useFreezed}}
+        return _response;
+        {{/useFreezed}}
+        {{#useFreezed}}
+            {{#freezedUnionResponse}}
+                {{#lambda.titlecase}}{{nickname}}{{/lambda.titlecase}}Data _responseData;
+                    try {
+                        {{#includeLibraryTemplate}}api/deserialize{{/includeLibraryTemplate}}
+                    } catch (error, stackTrace) {
+                    throw DioError(
+                    requestOptions: _response.requestOptions,
+                    response: _response,
+                    type: DioErrorType.unknown,
+                    error: error,
+                    stackTrace: stackTrace,
+                    );
+                    }
+                return Response<{{#lambda.titlecase}}{{nickname}}{{/lambda.titlecase}}Data>(
+                    data: _responseData,
+                    headers: _response.headers,
+                    isRedirect: _response.isRedirect,
+                    requestOptions: _response.requestOptions,
+                    redirects: _response.redirects,
+                    statusCode: _response.statusCode,
+                    statusMessage: _response.statusMessage,
+                    extra: _response.extra,
+                    );
+            {{/freezedUnionResponse}}
+            {{^freezedUnionResponse}}
+                    return _response;
+            {{/freezedUnionResponse}}
+        {{/useFreezed}}
+    {{/returnType}}
   }
 
   {{/operation}}
