--- a/modules/openapi-generator/src/main/resources/JavaPlayFramework/returnTypesNoVoid.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaPlayFramework/returnTypesNoVoid.mustache
@@ -1,1 +1,1 @@
-{{#returnType}}{{#returnContainer}}{{#isMap}}{{javaUtilPrefix}}Map<String, {{{returnType}}}>{{/isMap}}{{#isArray}}{{{returnContainer}}}<{{{returnType}}}>{{/isArray}}{{/returnContainer}}{{^returnContainer}}{{{returnType}}}{{/returnContainer}}{{/returnType}}
+{{#returnType}}{{#returnContainer}}{{#isMap}}Map<String, {{{returnType}}}>{{/isMap}}{{#isArray}}{{{returnContainer}}}<{{{returnType}}}>{{/isArray}}{{/returnContainer}}{{^returnContainer}}{{{returnType}}}{{/returnContainer}}{{/returnType}}
